@@ -247,8 +247,8 @@ else
 fi
 
 # Check for functions and headers.
-AC_CHECK_FUNCS(posix_memalign memalign asprintf vasprintf getfsstat getmntany)
-AC_CHECK_HEADERS(libzfs.h libnvpair.h)
+AC_CHECK_FUNCS(posix_memalign memalign asprintf vasprintf)
+AC_CHECK_HEADERS(libzfs.h libnvpair.h sys/param.h sys/mount.h)
 
 # For opendisk() and getrawpartition() on NetBSD.
 # Used in util/deviceiter.c and in util/hostdisk.c.
