@@ -1,5 +1,17 @@
 2010-08-04  Robert Millan  <rmh@gnu.org>
 
+	* configure.ac: Remove checks for getfsstat() and getmntany().
+	Add checks for `<sys/param.h>' and `<sys/mount.h>'.
+	* kern/emu/misc.c [HAVE_GETMNTANY]: Remove `<sys/mnttab.h>'.
+	[HAVE_SYS_PARAM_H]: Include `<sys/param.h>'.
+	[HAVE_SYS_MOUNT_H]: Include `<sys/mount.h>'.
+	[HAVE_LIBZFS && HAVE_LIBNVPAIR] (find_mount_point_from_dir): Remove
+	function.
+	(grub_find_zpool_from_dir): Use statfs() instead of indirect matching
+	via find_mount_point_from_dir() and getfsstat() / getmntany().
+
+2010-08-04  Robert Millan  <rmh@gnu.org>
+
 	* include/grub/emu/misc.h (grub_find_mount_point_from_dir)
 	(grub_find_zpool_from_mount_point): Merge into ...
 	(grub_find_zpool_from_dir): ... this.
